// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vuejs/core > vuejs/core 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
    "overrides": [
      {
        "files": [
          "**/*.js",
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "import",
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/consistent-type-imports": [
            "error",
            {
              "disallowTypeAnnotations": false,
              "fixStyle": "inline-type-imports",
            },
          ],
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "node:_http_agent",
                "node:_http_client",
                "node:_http_common",
                "node:_http_incoming",
                "node:_http_outgoing",
                "node:_http_server",
                "node:_stream_duplex",
                "node:_stream_passthrough",
                "node:_stream_readable",
                "node:_stream_transform",
                "node:_stream_wrap",
                "node:_stream_writable",
                "node:_tls_common",
                "node:_tls_wrap",
                "node:assert",
                "node:assert/strict",
                "node:async_hooks",
                "node:buffer",
                "node:child_process",
                "node:cluster",
                "node:console",
                "node:constants",
                "node:crypto",
                "node:dgram",
                "node:diagnostics_channel",
                "node:dns",
                "node:dns/promises",
                "node:domain",
                "node:events",
                "node:fs",
                "node:fs/promises",
                "node:http",
                "node:http2",
                "node:https",
                "node:inspector",
                "node:inspector/promises",
                "node:module",
                "node:net",
                "node:os",
                "node:path",
                "node:path/posix",
                "node:path/win32",
                "node:perf_hooks",
                "node:process",
                "node:punycode",
                "node:querystring",
                "node:readline",
                "node:readline/promises",
                "node:repl",
                "node:stream",
                "node:stream/consumers",
                "node:stream/promises",
                "node:stream/web",
                "node:string_decoder",
                "node:sys",
                "node:timers",
                "node:timers/promises",
                "node:tls",
                "node:trace_events",
                "node:tty",
                "node:url",
                "node:util",
                "node:util/types",
                "node:v8",
                "node:vm",
                "node:wasi",
                "node:worker_threads",
                "node:zlib",
              ],
            },
          ],
          "no-console": [
            "error",
            {
              "allow": [
                "warn",
                "error",
                "info",
              ],
            },
          ],
          "no-debugger": "error",
          "no-restricted-globals": [
            "error",
            "window",
            "document",
            "module",
            "require",
          ],
          "sort-imports": [
            "error",
            {
              "ignoreDeclarationSort": true,
            },
          ],
        },
      },
      {
        "files": [
          "**/__tests__/**",
          "packages-private/dts-test/**",
          "packages-private/dts-build-test/**",
        ],
        "globals": {
          "afterAll": "writable",
          "afterEach": "writable",
          "assert": "writable",
          "assertType": "writable",
          "beforeAll": "writable",
          "beforeEach": "writable",
          "chai": "writable",
          "describe": "writable",
          "expect": "writable",
          "expectTypeOf": "writable",
          "it": "writable",
          "onTestFailed": "writable",
          "onTestFinished": "writable",
          "suite": "writable",
          "test": "writable",
          "vi": "writable",
          "vitest": "writable",
        },
        "plugins": [
          "vitest",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
          "vitest/no-disabled-tests": "error",
          "vitest/no-focused-tests": "error",
        },
      },
      {
        "files": [
          "packages/shared/**",
          "eslint.config.js",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/{vue,vue-compat,runtime-dom}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "packages/{compiler-sfc,compiler-ssr,server-renderer}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "window",
            "document",
          ],
        },
      },
      {
        "files": [
          "packages-private/template-explorer/**",
          "packages-private/sfc-playground/**",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "*.js",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "args": "none",
              "vars": "all",
            },
          ],
        },
      },
      {
        "files": [
          "eslint.config.js",
          "rollup*.config.js",
          "scripts/**",
          "./*.{js,ts}",
          "packages/*/*.js",
          "packages/vue/*/*.js",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/compiler-sfc/src/**",
        ],
        "plugins": [
          "import",
        ],
        "rules": {
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "_http_agent",
                "_http_client",
                "_http_common",
                "_http_incoming",
                "_http_outgoing",
                "_http_server",
                "_stream_duplex",
                "_stream_passthrough",
                "_stream_readable",
                "_stream_transform",
                "_stream_wrap",
                "_stream_writable",
                "_tls_common",
                "_tls_wrap",
                "assert",
                "assert/strict",
                "async_hooks",
                "buffer",
                "child_process",
                "cluster",
                "console",
                "constants",
                "crypto",
                "dgram",
                "diagnostics_channel",
                "dns",
                "dns/promises",
                "domain",
                "events",
                "fs",
                "fs/promises",
                "http",
                "http2",
                "https",
                "inspector",
                "inspector/promises",
                "module",
                "net",
                "os",
                "path",
                "path/posix",
                "path/win32",
                "perf_hooks",
                "process",
                "punycode",
                "querystring",
                "readline",
                "readline/promises",
                "repl",
                "stream",
                "stream/consumers",
                "stream/promises",
                "stream/web",
                "string_decoder",
                "sys",
                "timers",
                "timers/promises",
                "tls",
                "trace_events",
                "tty",
                "url",
                "util",
                "util/types",
                "v8",
                "vm",
                "wasi",
                "worker_threads",
                "zlib",
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [
      "no-restricted-syntax",
    ],
  },
  "warnings": [],
}
`;

exports[`vuejs/core --js-plugins > vuejs/core--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
    "overrides": [
      {
        "files": [
          "**/*.js",
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "import",
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/consistent-type-imports": [
            "error",
            {
              "disallowTypeAnnotations": false,
              "fixStyle": "inline-type-imports",
            },
          ],
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "node:_http_agent",
                "node:_http_client",
                "node:_http_common",
                "node:_http_incoming",
                "node:_http_outgoing",
                "node:_http_server",
                "node:_stream_duplex",
                "node:_stream_passthrough",
                "node:_stream_readable",
                "node:_stream_transform",
                "node:_stream_wrap",
                "node:_stream_writable",
                "node:_tls_common",
                "node:_tls_wrap",
                "node:assert",
                "node:assert/strict",
                "node:async_hooks",
                "node:buffer",
                "node:child_process",
                "node:cluster",
                "node:console",
                "node:constants",
                "node:crypto",
                "node:dgram",
                "node:diagnostics_channel",
                "node:dns",
                "node:dns/promises",
                "node:domain",
                "node:events",
                "node:fs",
                "node:fs/promises",
                "node:http",
                "node:http2",
                "node:https",
                "node:inspector",
                "node:inspector/promises",
                "node:module",
                "node:net",
                "node:os",
                "node:path",
                "node:path/posix",
                "node:path/win32",
                "node:perf_hooks",
                "node:process",
                "node:punycode",
                "node:querystring",
                "node:readline",
                "node:readline/promises",
                "node:repl",
                "node:stream",
                "node:stream/consumers",
                "node:stream/promises",
                "node:stream/web",
                "node:string_decoder",
                "node:sys",
                "node:timers",
                "node:timers/promises",
                "node:tls",
                "node:trace_events",
                "node:tty",
                "node:url",
                "node:util",
                "node:util/types",
                "node:v8",
                "node:vm",
                "node:wasi",
                "node:worker_threads",
                "node:zlib",
              ],
            },
          ],
          "no-console": [
            "error",
            {
              "allow": [
                "warn",
                "error",
                "info",
              ],
            },
          ],
          "no-debugger": "error",
          "no-restricted-globals": [
            "error",
            "window",
            "document",
            "module",
            "require",
          ],
          "sort-imports": [
            "error",
            {
              "ignoreDeclarationSort": true,
            },
          ],
        },
      },
      {
        "files": [
          "**/__tests__/**",
          "packages-private/dts-test/**",
          "packages-private/dts-build-test/**",
        ],
        "globals": {
          "afterAll": "writable",
          "afterEach": "writable",
          "assert": "writable",
          "assertType": "writable",
          "beforeAll": "writable",
          "beforeEach": "writable",
          "chai": "writable",
          "describe": "writable",
          "expect": "writable",
          "expectTypeOf": "writable",
          "it": "writable",
          "onTestFailed": "writable",
          "onTestFinished": "writable",
          "suite": "writable",
          "test": "writable",
          "vi": "writable",
          "vitest": "writable",
        },
        "plugins": [
          "vitest",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
          "vitest/no-disabled-tests": "error",
          "vitest/no-focused-tests": "error",
        },
      },
      {
        "files": [
          "packages/shared/**",
          "eslint.config.js",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/{vue,vue-compat,runtime-dom}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "packages/{compiler-sfc,compiler-ssr,server-renderer}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "window",
            "document",
          ],
        },
      },
      {
        "files": [
          "packages-private/template-explorer/**",
          "packages-private/sfc-playground/**",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "*.js",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "args": "none",
              "vars": "all",
            },
          ],
        },
      },
      {
        "files": [
          "eslint.config.js",
          "rollup*.config.js",
          "scripts/**",
          "./*.{js,ts}",
          "packages/*/*.js",
          "packages/vue/*/*.js",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/compiler-sfc/src/**",
        ],
        "plugins": [
          "import",
        ],
        "rules": {
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "_http_agent",
                "_http_client",
                "_http_common",
                "_http_incoming",
                "_http_outgoing",
                "_http_server",
                "_stream_duplex",
                "_stream_passthrough",
                "_stream_readable",
                "_stream_transform",
                "_stream_wrap",
                "_stream_writable",
                "_tls_common",
                "_tls_wrap",
                "assert",
                "assert/strict",
                "async_hooks",
                "buffer",
                "child_process",
                "cluster",
                "console",
                "constants",
                "crypto",
                "dgram",
                "diagnostics_channel",
                "dns",
                "dns/promises",
                "domain",
                "events",
                "fs",
                "fs/promises",
                "http",
                "http2",
                "https",
                "inspector",
                "inspector/promises",
                "module",
                "net",
                "os",
                "path",
                "path/posix",
                "path/win32",
                "perf_hooks",
                "process",
                "punycode",
                "querystring",
                "readline",
                "readline/promises",
                "repl",
                "stream",
                "stream/consumers",
                "stream/promises",
                "stream/web",
                "string_decoder",
                "sys",
                "timers",
                "timers/promises",
                "tls",
                "trace_events",
                "tty",
                "url",
                "util",
                "util/types",
                "v8",
                "vm",
                "wasi",
                "worker_threads",
                "zlib",
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [
      "no-restricted-syntax",
    ],
  },
  "warnings": [],
}
`;

exports[`vuejs/core --type-aware > vuejs/core--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
    "overrides": [
      {
        "files": [
          "**/*.js",
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "import",
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/consistent-type-imports": [
            "error",
            {
              "disallowTypeAnnotations": false,
              "fixStyle": "inline-type-imports",
            },
          ],
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "node:_http_agent",
                "node:_http_client",
                "node:_http_common",
                "node:_http_incoming",
                "node:_http_outgoing",
                "node:_http_server",
                "node:_stream_duplex",
                "node:_stream_passthrough",
                "node:_stream_readable",
                "node:_stream_transform",
                "node:_stream_wrap",
                "node:_stream_writable",
                "node:_tls_common",
                "node:_tls_wrap",
                "node:assert",
                "node:assert/strict",
                "node:async_hooks",
                "node:buffer",
                "node:child_process",
                "node:cluster",
                "node:console",
                "node:constants",
                "node:crypto",
                "node:dgram",
                "node:diagnostics_channel",
                "node:dns",
                "node:dns/promises",
                "node:domain",
                "node:events",
                "node:fs",
                "node:fs/promises",
                "node:http",
                "node:http2",
                "node:https",
                "node:inspector",
                "node:inspector/promises",
                "node:module",
                "node:net",
                "node:os",
                "node:path",
                "node:path/posix",
                "node:path/win32",
                "node:perf_hooks",
                "node:process",
                "node:punycode",
                "node:querystring",
                "node:readline",
                "node:readline/promises",
                "node:repl",
                "node:stream",
                "node:stream/consumers",
                "node:stream/promises",
                "node:stream/web",
                "node:string_decoder",
                "node:sys",
                "node:timers",
                "node:timers/promises",
                "node:tls",
                "node:trace_events",
                "node:tty",
                "node:url",
                "node:util",
                "node:util/types",
                "node:v8",
                "node:vm",
                "node:wasi",
                "node:worker_threads",
                "node:zlib",
              ],
            },
          ],
          "no-console": [
            "error",
            {
              "allow": [
                "warn",
                "error",
                "info",
              ],
            },
          ],
          "no-debugger": "error",
          "no-restricted-globals": [
            "error",
            "window",
            "document",
            "module",
            "require",
          ],
          "sort-imports": [
            "error",
            {
              "ignoreDeclarationSort": true,
            },
          ],
        },
      },
      {
        "files": [
          "**/__tests__/**",
          "packages-private/dts-test/**",
          "packages-private/dts-build-test/**",
        ],
        "globals": {
          "afterAll": "writable",
          "afterEach": "writable",
          "assert": "writable",
          "assertType": "writable",
          "beforeAll": "writable",
          "beforeEach": "writable",
          "chai": "writable",
          "describe": "writable",
          "expect": "writable",
          "expectTypeOf": "writable",
          "it": "writable",
          "onTestFailed": "writable",
          "onTestFinished": "writable",
          "suite": "writable",
          "test": "writable",
          "vi": "writable",
          "vitest": "writable",
        },
        "plugins": [
          "vitest",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
          "vitest/no-disabled-tests": "error",
          "vitest/no-focused-tests": "error",
        },
      },
      {
        "files": [
          "packages/shared/**",
          "eslint.config.js",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/{vue,vue-compat,runtime-dom}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "packages/{compiler-sfc,compiler-ssr,server-renderer}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "window",
            "document",
          ],
        },
      },
      {
        "files": [
          "packages-private/template-explorer/**",
          "packages-private/sfc-playground/**",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "*.js",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "args": "none",
              "vars": "all",
            },
          ],
        },
      },
      {
        "files": [
          "eslint.config.js",
          "rollup*.config.js",
          "scripts/**",
          "./*.{js,ts}",
          "packages/*/*.js",
          "packages/vue/*/*.js",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/compiler-sfc/src/**",
        ],
        "plugins": [
          "import",
        ],
        "rules": {
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "_http_agent",
                "_http_client",
                "_http_common",
                "_http_incoming",
                "_http_outgoing",
                "_http_server",
                "_stream_duplex",
                "_stream_passthrough",
                "_stream_readable",
                "_stream_transform",
                "_stream_wrap",
                "_stream_writable",
                "_tls_common",
                "_tls_wrap",
                "assert",
                "assert/strict",
                "async_hooks",
                "buffer",
                "child_process",
                "cluster",
                "console",
                "constants",
                "crypto",
                "dgram",
                "diagnostics_channel",
                "dns",
                "dns/promises",
                "domain",
                "events",
                "fs",
                "fs/promises",
                "http",
                "http2",
                "https",
                "inspector",
                "inspector/promises",
                "module",
                "net",
                "os",
                "path",
                "path/posix",
                "path/win32",
                "perf_hooks",
                "process",
                "punycode",
                "querystring",
                "readline",
                "readline/promises",
                "repl",
                "stream",
                "stream/consumers",
                "stream/promises",
                "stream/web",
                "string_decoder",
                "sys",
                "timers",
                "timers/promises",
                "tls",
                "trace_events",
                "tty",
                "url",
                "util",
                "util/types",
                "v8",
                "vm",
                "wasi",
                "worker_threads",
                "zlib",
              ],
            },
          ],
        },
      },
    ],
    "plugins": [],
  },
  "skipped": {
    "js-plugins": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [
      "no-restricted-syntax",
    ],
  },
  "warnings": [],
}
`;

exports[`vuejs/core merge > vuejs/core--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
    },
    "ignorePatterns": [
      "**/dist/",
      "**/temp/",
      "**/coverage/",
      ".idea/",
      "explorations/",
      "dts-build/packages",
    ],
    "overrides": [
      {
        "files": [
          "**/*.js",
          "**/*.ts",
          "**/*.tsx",
        ],
        "plugins": [
          "import",
          "typescript",
        ],
        "rules": {
          "@typescript-eslint/consistent-type-imports": [
            "error",
            {
              "disallowTypeAnnotations": false,
              "fixStyle": "inline-type-imports",
            },
          ],
          "@typescript-eslint/no-import-type-side-effects": "error",
          "@typescript-eslint/prefer-ts-expect-error": "error",
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "node:_http_agent",
                "node:_http_client",
                "node:_http_common",
                "node:_http_incoming",
                "node:_http_outgoing",
                "node:_http_server",
                "node:_stream_duplex",
                "node:_stream_passthrough",
                "node:_stream_readable",
                "node:_stream_transform",
                "node:_stream_wrap",
                "node:_stream_writable",
                "node:_tls_common",
                "node:_tls_wrap",
                "node:assert",
                "node:assert/strict",
                "node:async_hooks",
                "node:buffer",
                "node:child_process",
                "node:cluster",
                "node:console",
                "node:constants",
                "node:crypto",
                "node:dgram",
                "node:diagnostics_channel",
                "node:dns",
                "node:dns/promises",
                "node:domain",
                "node:events",
                "node:fs",
                "node:fs/promises",
                "node:http",
                "node:http2",
                "node:https",
                "node:inspector",
                "node:inspector/promises",
                "node:module",
                "node:net",
                "node:os",
                "node:path",
                "node:path/posix",
                "node:path/win32",
                "node:perf_hooks",
                "node:process",
                "node:punycode",
                "node:querystring",
                "node:readline",
                "node:readline/promises",
                "node:repl",
                "node:stream",
                "node:stream/consumers",
                "node:stream/promises",
                "node:stream/web",
                "node:string_decoder",
                "node:sys",
                "node:timers",
                "node:timers/promises",
                "node:tls",
                "node:trace_events",
                "node:tty",
                "node:url",
                "node:util",
                "node:util/types",
                "node:v8",
                "node:vm",
                "node:wasi",
                "node:worker_threads",
                "node:zlib",
              ],
            },
          ],
          "no-console": [
            "error",
            {
              "allow": [
                "warn",
                "error",
                "info",
              ],
            },
          ],
          "no-debugger": "error",
          "no-restricted-globals": [
            "error",
            "window",
            "document",
            "module",
            "require",
          ],
          "sort-imports": [
            "error",
            {
              "ignoreDeclarationSort": true,
            },
          ],
        },
      },
      {
        "files": [
          "**/__tests__/**",
          "packages-private/dts-test/**",
          "packages-private/dts-build-test/**",
        ],
        "globals": {
          "afterAll": "writable",
          "afterEach": "writable",
          "assert": "writable",
          "assertType": "writable",
          "beforeAll": "writable",
          "beforeEach": "writable",
          "chai": "writable",
          "describe": "writable",
          "expect": "writable",
          "expectTypeOf": "writable",
          "it": "writable",
          "onTestFailed": "writable",
          "onTestFinished": "writable",
          "suite": "writable",
          "test": "writable",
          "vi": "writable",
          "vitest": "writable",
        },
        "plugins": [
          "vitest",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
          "vitest/no-disabled-tests": "error",
          "vitest/no-focused-tests": "error",
        },
      },
      {
        "files": [
          "packages/shared/**",
          "eslint.config.js",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/{vue,vue-compat,runtime-dom}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "packages/{compiler-sfc,compiler-ssr,server-renderer}/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            "window",
            "document",
          ],
        },
      },
      {
        "files": [
          "packages-private/template-explorer/**",
          "packages-private/sfc-playground/**",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": [
            "error",
            "module",
            "require",
          ],
        },
      },
      {
        "files": [
          "*.js",
        ],
        "rules": {
          "no-unused-vars": [
            "error",
            {
              "args": "none",
              "vars": "all",
            },
          ],
        },
      },
      {
        "files": [
          "eslint.config.js",
          "rollup*.config.js",
          "scripts/**",
          "./*.{js,ts}",
          "packages/*/*.js",
          "packages/vue/*/*.js",
        ],
        "rules": {
          "no-console": "off",
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "packages/compiler-sfc/src/**",
        ],
        "plugins": [
          "import",
        ],
        "rules": {
          "import-x/no-nodejs-modules": [
            "error",
            {
              "allow": [
                "_http_agent",
                "_http_client",
                "_http_common",
                "_http_incoming",
                "_http_outgoing",
                "_http_server",
                "_stream_duplex",
                "_stream_passthrough",
                "_stream_readable",
                "_stream_transform",
                "_stream_wrap",
                "_stream_writable",
                "_tls_common",
                "_tls_wrap",
                "assert",
                "assert/strict",
                "async_hooks",
                "buffer",
                "child_process",
                "cluster",
                "console",
                "constants",
                "crypto",
                "dgram",
                "diagnostics_channel",
                "dns",
                "dns/promises",
                "domain",
                "events",
                "fs",
                "fs/promises",
                "http",
                "http2",
                "https",
                "inspector",
                "inspector/promises",
                "module",
                "net",
                "os",
                "path",
                "path/posix",
                "path/win32",
                "perf_hooks",
                "process",
                "punycode",
                "querystring",
                "readline",
                "readline/promises",
                "repl",
                "stream",
                "stream/consumers",
                "stream/promises",
                "stream/web",
                "string_decoder",
                "sys",
                "timers",
                "timers/promises",
                "tls",
                "trace_events",
                "tty",
                "url",
                "util",
                "util/types",
                "v8",
                "vm",
                "wasi",
                "worker_threads",
                "zlib",
              ],
            },
          ],
        },
      },
    ],
  },
  "skipped": {
    "js-plugins": [],
    "nursery": [],
    "type-aware": [],
    "unsupported": [
      "no-restricted-syntax",
    ],
  },
  "warnings": [],
}
`;
